info about numpy error

--- a/notebooks/ChromMovie_tutorial.ipynb
+++ b/notebooks/ChromMovie_tutorial.ipynb
@@ -47,7 +47,7 @@
    "id": "64e87f2d-e339-43bc-9150-6a0516fef00b",
    "metadata": {},
    "source": [
-    "And install the requirements:"
+    "And install the requirements (in case of the problems with numpy, please just restart the session and rerun the cell below):"
    ]
   },
   {
